# orion_mesh

./: .gitignore  CLAUDE.md  Cargo.toml  OrionMesh_Architecture_Plan.md  OrionMesh_Complete_Plan.md  README.md
.claude/skills/orion-diag/: SKILL.md
.claude/skills/orion-diag/scripts/: diag.py
.claude/skills/orion-ipc-demo/: SKILL.md
.claude/skills/orion-logs/: SKILL.md
.claude/skills/orion-manage/: SKILL.md
.claude/skills/orion-run-service/: SKILL.md
.claude/skills/orion-run-task/: SKILL.md
.claude/skills/orion-schedule/: SKILL.md
.claude/skills/orion-status/: SKILL.md
.claude/skills/run-readme/: SKILL.md
.claude/skills/validate-resource/: SKILL.md
.github/workflows/: ci.yml
clients/go/: README.md  go.mod  go.sum
clients/go/orionmesh/: client.go  client_test.go  errors.go  queue.go
clients/java/: README.md  pom.xml
clients/python/: README.md  pyproject.toml
clients/python/examples/: quickstart.py
clients/python/orion_mesh/: __init__.py  client.py  errors.py  models.py
clients/python/tests/: conftest.py  test_client.py  test_integration.py
crates/orion-agent/: Cargo.toml
crates/orion-agent/src/: main.rs
crates/orion-auth/: Cargo.toml
crates/orion-auth/src/: lib.rs  tests.rs
crates/orion-bus/: Cargo.toml
crates/orion-bus/src/: client.rs  lib.rs  tests.rs  topics.rs
crates/orion-bus/src/messages/: capabilities.rs  control.rs  heartbeat.rs  inventory.rs  log_line.rs  metric.rs  mod.rs  service.rs  service_health.rs  task.rs
crates/orion-cli/: Cargo.toml
crates/orion-cli/src/: http.rs  main.rs  nats.rs  output.rs
crates/orion-cli/src/cmd/: apply.rs  bench.rs  delete.rs  describe.rs  diag.rs  dispatch.rs  doctor.rs  find.rs  generate.rs  get.rs  init.rs  instances.rs  json.rs  logs.rs  mod.rs  queue.rs  run.rs  schedules.rs  shell.rs  snapshot.rs  stop_restart.rs  tui.rs  up.rs  validate.rs
crates/orion-controller/: Cargo.toml
crates/orion-controller/src/: decisions.rs  main.rs
crates/orion-demo-bins/: Cargo.toml
crates/orion-devportal/: Cargo.toml
crates/orion-devportal/src/: lib.rs
crates/orion-file-watcher/: Cargo.toml
crates/orion-file-watcher/src/: lib.rs
crates/orion-kafka-bridge/: Cargo.toml
crates/orion-kafka-bridge/src/: lib.rs  main.rs
crates/orion-kafka-bridge/tests/: live.rs
crates/orion-mcp/: Cargo.toml
crates/orion-mcp/src/: lib.rs
crates/orion-opensearch-sink/: Cargo.toml
crates/orion-opensearch-sink/src/: lib.rs  main.rs
crates/orion-opensearch-sink/tests/: live.rs
crates/orion-prom-scrape/: Cargo.toml
crates/orion-prom-scrape/src/: lib.rs  main.rs
crates/orion-prom-scrape/tests/: live.rs
crates/orion-runtime/: Cargo.toml
crates/orion-runtime/src/: adapter.rs  docker.rs  lib.rs  native.rs  secrets.rs  wasm.rs
crates/orion-scheduler/: Cargo.toml
crates/orion-scheduler/src/: lib.rs
crates/orion-sidecar/: Cargo.toml
crates/orion-sidecar/src/: lib.rs  main.rs
crates/orion-sqlite-tap/: Cargo.toml
crates/orion-sqlite-tap/src/: lib.rs  main.rs
crates/orion-sqlite-tap/tests/: live.rs
crates/orion-store/: Cargo.toml
crates/orion-store/src/: lib.rs  logs.rs  node_cache.rs  tests.rs
crates/orion-store/src/migrations/: 0001_init.sql  0002_ensure_tables.sql  0003_log_archive.sql
crates/orion-types/: Cargo.toml
crates/orion-types/src/: capability.rs  lib.rs  metadata.rs  placement.rs  resource.rs  runtime.rs  specs.rs  status.rs  tests.rs
crates/orion-ui/: Cargo.toml
crates/orion-ui/src/: index.html  main.rs
crates/orion-webhook/: Cargo.toml
crates/orion-webhook/src/: lib.rs  main.rs
docs/: README.md  architecture.md  debugging-processors.md  debugging.md  design.md  diagnostics.md  examples.md  installation.md  ipc.md  multi-host.md  queues.md  quickstart.md  runner.md  runtime.md  skills.md  usage.md
examples/: README.md  walkthrough.sh
examples/01-services/: README.md  docker-nginx.yaml  docker-redis.yaml  native-sleeper.yaml  native-with-exec-health.yaml
examples/02-tasks/: README.md  java-batch.yaml  native-snapshot.yaml  python-train.yaml
examples/03-schedules/: README.md  hourly-health-check.yaml  inline-template.yaml  reference.yaml
examples/04-capabilities/: README.md  advertise-search.yaml  declared-schema.yaml  require-equals.yaml  require-oneof.yaml  require-op.yaml
examples/05-placement/: README.md  arch-only.yaml  combined.yaml  gpu-required.yaml  prefer-soft.yaml  site-label.yaml
examples/06-data/: README.md  dataset-multi-location.yaml  dataset-readonly.yaml  model-served-by.yaml  model-variants.yaml  secret-plaintext.yaml  volume.yaml
examples/07-peers/: README.md  devportal-local.yaml  kqueue-default.yaml  orionmesh-belmont.yaml  service-via-kqueue.yaml  task-via-peer-mesh.yaml
examples/08-canonical/: README.md  amiga-search-full.yaml  amiga-search.yaml
examples/09-ipc/: README.md  demo-pub.yaml  demo-sub.yaml  fanout-3-replicas.yaml  queue-group-3-workers.yaml
examples/09-ipc/jetstream/: README.md  js-pub.yaml  js-sub-replay-on-restart.yaml  js-sub-workers.yaml
examples/09-ipc/polyglot/: README.md
examples/10-queues/: README.md  queue-topic.yaml  queue-work.yaml
examples/10-queues/java/: pom.xml  setup.sh
examples/10-queues/python/: processor.py  requirements.txt  setup.sh
examples/11-workflows/: README.md
examples/12-find/: README.md
examples/13-mcp/: README.md
examples/14-python-client/: README.md  consumer-service.yaml  consumer.py  full_flow.py  producer.py
examples/15-java-client/: README.md  consumer-service.yaml  pom.xml
examples/16-go-client/: README.md  consumer-service.yaml  go.mod
examples/17-shell/: README.md
examples/18-file-watcher/: README.md  watcher-service.yaml
examples/19-webhook/: README.md  webhook-service.yaml
examples/20-sidecar/: README.md
examples/21-kafka/: README.md
examples/22-opensearch/: README.md
examples/23-prom-scrape/: README.md
examples/24-sqlite-cdc/: README.md
examples/bad/: README.md  bad-restart-policy.yaml  schedule-both.yaml  schedule-neither.yaml  unknown-kind.yaml  unknown-runtime.yaml
scripts/: install-bins.sh  install-nats.sh  run-md.py
(+48 files in other folders)
