[workspace]
resolver = "3"
members = [
    "crates/orion-types",
    "crates/orion-bus",
    "crates/orion-auth",
    "crates/orion-runtime",
    "crates/orion-store",
    "crates/orion-scheduler",
    "crates/orion-devportal",
    "crates/orion-mcp",
    "crates/orion-agent",
    "crates/orion-controller",
    "crates/orion-cli",
    "crates/orion-ui",
    "crates/orion-demo-bins",
    "crates/orion-file-watcher",
    "crates/orion-webhook",
]

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0 OR MIT"
publish = false
repository = "https://github.com/geekychris/orion_mesh"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util", "process", "sync", "io-std"] }
futures = "0.3"
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

async-nats = "0.38"

axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

clap = { version = "4", features = ["derive", "env"] }

redb = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid", "json", "migrate"] }
sysinfo = "0.32"
cron = "0.12"

wasmtime = { version = "26", default-features = false, features = ["cranelift", "runtime", "wat", "component-model", "async"] }
wasmtime-wasi = { version = "26", default-features = false, features = ["preview1"] }

ratatui = "0.28"
crossterm = "0.28"

orion-types = { path = "crates/orion-types" }
orion-bus = { path = "crates/orion-bus" }
orion-auth = { path = "crates/orion-auth" }
orion-runtime = { path = "crates/orion-runtime" }
orion-store = { path = "crates/orion-store" }
orion-scheduler = { path = "crates/orion-scheduler" }
orion-devportal = { path = "crates/orion-devportal" }
orion-mcp = { path = "crates/orion-mcp" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
