[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-mesh"
version = "0.1.0"
description = "Official Python client for OrionMesh — controller REST + JetStream queues"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "OrionMesh" }]
keywords = ["orionmesh", "orchestration", "nats", "jetstream"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28",
    "nats-py>=2.7,<3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.21", "responses>=0.23"]

[project.urls]
Homepage = "https://github.com/geekychris/orion_mesh"
Repository = "https://github.com/geekychris/orion_mesh"

[tool.setuptools.packages.find]
where = ["."]
include = ["orion_mesh*"]
