[package]
name = "orion-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "OrionMesh node agent — runs on every node"

[[bin]]
name = "orion-agent"
path = "src/main.rs"

[dependencies]
orion-types.workspace = true
orion-bus.workspace = true
tokio.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
