[package]
name = "orion-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "OrionMesh command-line client"

[[bin]]
name = "orion"
path = "src/main.rs"

[dependencies]
orion-types.workspace = true
orion-bus.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
reqwest.workspace = true
async-nats.workspace = true
futures.workspace = true
chrono.workspace = true
regex = "1"
