[package]
name = "orion-kafka-bridge"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Bidirectional bridge between OrionMesh queues and Apache Kafka topics"

[[bin]]
name = "orion-kafka-bridge"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
orion-bus.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
async-nats.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true
rdkafka = { version = "0.36", default-features = false, features = ["tokio"] }
