[package]
name = "orion-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "OrionMesh MCP server (stub for now)"

[dependencies]
orion-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
clap.workspace = true

[[bin]]
name = "orion-mcp"
path = "src/bin/server.rs"
