[package]
name = "orion-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Runtime adapter trait + SecretResolver for OrionMesh agents"

[dependencies]
orion-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
