[package]
name = "orion-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Runtime adapter trait + SecretResolver for OrionMesh agents"

[features]
default = []
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
orion-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
wat = "1"
