[package]
name = "orion-scheduler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Capability-aware scheduler for OrionMesh"

[dependencies]
orion-types.workspace = true
orion-bus.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
