[package]
name = "orion-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Persistent store for desired-state resources (SQLite)"

[dependencies]
orion-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
sqlx.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
