[package]
name = "orion-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "OrionMesh admin UI server"

[[bin]]
name = "orion-ui"
path = "src/main.rs"

[dependencies]
orion-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
