[package]
name = "orion-webhook"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "HTTP webhook receiver Service for OrionMesh — converts incoming POSTs to queue messages"

[[bin]]
name = "orion-webhook"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
orion-types.workspace = true
orion-bus.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
async-nats.workspace = true
axum.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
